base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gitea
  labels:
    app.kubernetes.io/name: gitea
    app.kubernetes.io/instance: gitea
spec:
  selector:
    app.kubernetes.io/name: gitea
    app.kubernetes.io/instance: gitea
  ports:
    - name: gitea-http
      port: 3000
      targetPort: 3000
    - name: gitea-ssh
      port: 22
      targetPort: 22
